--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,10 +16,12 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- Material-UI Kit RobotoFont -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" /> -->
    <!-- Material UI Kit Font Icons -->
    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-
+   <link rel="preconnect" href="https://fonts.gstatic.com">
+  
+   <link href="https://fonts.googleapis.com/css2?family=Leckerli+One&display=swap" rel="stylesheet">
    <title>PARTIE</title>
   </head>
   <body>
